package persistence;

import java.nio.file.Path;
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.SQLException;
import java.sql.Statement;

/**
 * Управление подключением к встроенной СУБД H2.
 */
public final class DatabaseConnectionManager {

    private static final String DATABASE_FILE = "database/detention_registry";
    private static Connection connection;

    private DatabaseConnectionManager() {
    }

    public static synchronized Connection getConnection() throws SQLException {
        if (connection == null || connection.isClosed()) {
            Path databaseDir = Path.of("database");
            if (!databaseDir.toFile().exists()) {
                databaseDir.toFile().mkdirs();
            }
            String url = "jdbc:h2:./" + DATABASE_FILE + ";MODE=PostgreSQL;AUTO_SERVER=TRUE";
            connection = DriverManager.getConnection(url, "sa", "");
            initializeSchema();
        }
        return connection;
    }

    private static void initializeSchema() throws SQLException {
        String sql = """
                CREATE TABLE IF NOT EXISTS detentions (
                    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                    full_name VARCHAR(255) NOT NULL,
                    birth_date DATE NOT NULL,
                    detention_datetime TIMESTAMP NOT NULL,
                    reason VARCHAR(500) NOT NULL,
                    article VARCHAR(100),
                    officer_name VARCHAR(255) NOT NULL,
                    cell_number VARCHAR(20),
                    status VARCHAR(30) NOT NULL,
                    release_datetime TIMESTAMP,
                    notes VARCHAR(1000)
                )
                """;
        try (Statement statement = connection.createStatement()) {
            statement.execute(sql);
        }
    }

    public static void close() {
        if (connection != null) {
            try {
                connection.close();
            } catch (SQLException ignored) {
            }
            connection = null;
        }
    }
}
